force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <displayFormat>G-{00}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>