force-app/main/default/objects/Account_Plan__c/fields/DocumentLink__c.field-meta.xml
<CustomField>
    <fullName>DocumentLink__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>